<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.uniovi</groupId>
	<artifactId>sercheduler</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>sercheduler</name>
	<description>GA for scheduling Wrokflows</description>
	<properties>
		<java.version>17</java.version>
		<spring-shell.version>3.2.1</spring-shell.version>
		<jackson.version>2.15.2</jackson.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.shell</groupId>
			<artifactId>spring-shell-starter</artifactId>
		</dependency>

<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-devtools</artifactId>-->
<!--			<scope>runtime</scope>-->
<!--			<optional>true</optional>-->
<!--		</dependency>-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.uma.jmetal/jmetal-core -->
		<dependency>
			<groupId>org.uma.jmetal</groupId>
			<artifactId>jmetal-core</artifactId>
			<version>6.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.uma.jmetal/jmetal-algorithm -->
		<dependency>
			<groupId>org.uma.jmetal</groupId>
			<artifactId>jmetal-algorithm</artifactId>
			<version>6.2</version>
		</dependency>

		<dependency>
			<groupId>org.uma.jmetal</groupId>
			<artifactId>jmetal-component</artifactId>
			<version>6.2</version>
		</dependency>

		<dependency>
			<groupId>org.uma.jmetal</groupId>
			<artifactId>jmetal-lab</artifactId>
			<version>6.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.uma.jmetal/jmetal -->
		<dependency>
			<groupId>org.uma.jmetal</groupId>
			<artifactId>jmetal</artifactId>
			<version>6.2</version>
			<type>pom</type>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.2.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.2.3</version>
		</dependency>





		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-core</artifactId>
			<version>1.35</version>
		</dependency>
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-generator-annprocess</artifactId>
			<version>1.35</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
			<version>${jackson.version}</version>
		</dependency>


	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.shell</groupId>
				<artifactId>spring-shell-dependencies</artifactId>
				<version>${spring-shell.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
			</plugin>
		</plugins>


	</build>

</project>
